@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-24T01:11:34Z",
+  "timestamp" : "2022-07-24T08:14:26Z",
   "count_outdated" : 410,
   "uniques_outdated" : 222,
   "count" : 433,
-  "uniques" : 234,
+  "uniques" : 235,
   "clones" : [
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -70,6 +70,13 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
