@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "uniques": 2
     },
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
